RESOLVED FIXED149391
WebKitTestRunner can leak user content script results between tests
https://bugs.webkit.org/show_bug.cgi?id=149391
Summary WebKitTestRunner can leak user content script results between tests
Alexey Proskuryakov
Reported 2015-09-20 14:13:37 PDT
WebKitTestRunner removes user content before starting a new test. But this means that user content scripts run in about:blank that is loaded between tests, and can produce output. They can even install timers that will run when WKTR thinks that it's already running a new test.
Attachments
proposed fix (2.36 KB, patch)
2015-09-20 14:17 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-09-20 14:14:48 PDT
Steps to reproduce: run these tests in order, in a single process: userscripts/window-onerror-for-isolated-world-1.html userscripts/window-onerror-for-isolated-world-2.html webgl/1.0.2/conformance/glsl/literals/float_literal.vert.html
Alexey Proskuryakov
Comment 2 2015-09-20 14:17:08 PDT
Created attachment 261613 [details] proposed fix
WebKit Commit Bot
Comment 3 2015-09-20 17:29:00 PDT
Comment on attachment 261613 [details] proposed fix Clearing flags on attachment: 261613 Committed r190035: <http://trac.webkit.org/changeset/190035>
WebKit Commit Bot
Comment 4 2015-09-20 17:29:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.