WebKitTestRunner can leak user content script results between tests https://bugs.webkit.org/show_bug.cgi?id=149391

Reviewed by Sam Weinig.

Move WKBundlePageRemoveAllUserContent call so that it's executed before loading
about:blank, and thus about:blank doesn't have unintended side effects.

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::beginTesting):
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::resetAfterTest):


Canonical link: https://commits.webkit.org/167476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190035 268f45cc-cd09-0410-ab3c-d52691b4dbfc