Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp
@@ -427,6 +427,9 @@ void InjectedBundlePage::resetAfterTest()
     JSGlobalContextRef context = WKBundleFrameGetJavaScriptContext(frame);
     WebCoreTestSupport::resetInternalsObject(context);
     assignedUrlsCache.clear();
+
+    // User scripts need to be removed after the test and before loading about:blank, as otherwise they would run in about:blank, and potentially leak results into a subsequest test.
+    WKBundlePageRemoveAllUserContent(m_page);
 }
 
 // Loader Client Callbacks
